IE fixes
I managed to fix the background-color issue for <hr class="rule"> by adding a container div around it. I styled it with white border and background-color and it shows correctly now.
I fixed an issue on IE where the text in staff images was getting to the very edge of the page. I fixed it. It was an issue on small screen sizes only
 The drop-down in the header on small screens did not show the items. The problem was that they were left aligned. I added code to align them to the right of the page
The staff images get on top of each other when the screen get too big (for example 2 screens - over 2500px). I added a max width and height to avoid that.

--- a/css/scss/partials/_about-us.scss
+++ b/css/scss/partials/_about-us.scss
@@ -14,8 +14,8 @@
   @media screen and (-ms-high-contrast: none) {
     background-color: white;
     flex-direction: column;
+    border-top: 1px white solid;
 }
-
 }
 
 //Styling the main story text
@@ -41,8 +41,7 @@
     justify-content: space-evenly;
   @media screen and (-ms-high-contrast: none) {
     justify-content: space-around;
-  }
-
+}
 }
 }
 
@@ -56,6 +55,13 @@
 //Making the text of the staff cards extends
 .staff-images p {
   text-align: justify;
+//Added extra code for IE as the text got to the edges on IE
+  @media screen and (-ms-high-contrast: none) {
+    padding: 0 25px;
+    @media only screen and (min-width: $break-s) {
+      padding: inherit;
+}
+}
 }
 
 //Make the images round and sizing them correctly for different screens
@@ -80,6 +86,8 @@
     width: 15vw;
     height: 15vw;
     transition-duration: 1s;
+    max-width: 350px;
+    max-height: 350px;
 }
 }
 
