--- a/css/scss/partials/_header.scss
+++ b/css/scss/partials/_header.scss
@@ -84,6 +84,9 @@
   @media only screen and (min-width: $break-m) {
     display: none;
 }
+  @media screen and (-ms-high-contrast: none) {
+    text-align: right;
+}
 }
 
 //Some styling that could not go in the #header-small
