--- a/css/scss/partials/_products.scss
+++ b/css/scss/partials/_products.scss
@@ -13,6 +13,7 @@
 .product-cards-container {
   @media screen and (-ms-high-contrast: none) {
     background-color: white;
+    border-top: 1px white solid;
 }
 }
 
